--- a/css/main.css
+++ b/css/main.css
@@ -10717,14 +10717,45 @@ a {
           font-size: 24px;
           color: #fff;
           z-index: 1; }
-          .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__title {
-            font-size: 20px;
-            margin-bottom: 10px;
-            display: block;
-            font-weight: 700; }
-          .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__price {
-            margin-bottom: 10px;
-            display: block; }
+          .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap {
+            position: relative; }
+            .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap .swiper-slide__title {
+              font-size: 20px;
+              margin-bottom: 10px;
+              display: block;
+              font-weight: 700; }
+            .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap .swiper-slide__price {
+              margin-bottom: 10px;
+              display: block; }
+            .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap .btn-view {
+              -webkit-transition: 0.3s all;
+              -o-transition: 0.3s all;
+              transition: 0.3s all;
+              opacity: 0;
+              background: #fff;
+              color: #00a1eb;
+              display: inline-block;
+              -webkit-border-radius: 4px;
+                      border-radius: 4px;
+              padding: 11px 18px;
+              font-size: 14px;
+              line-height: 1;
+              position: absolute;
+              left: 25%;
+              font-weight: 700; }
+              .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap .btn-view:after {
+                background-color: #00a1eb;
+                display: block;
+                content: "";
+                height: 1px;
+                width: 0%;
+                -webkit-transition: width .3s ease-in-out;
+                -moz--transition: width .3s ease-in-out;
+                -o-transition: width .3s ease-in-out;
+                transition: width .3s ease-in-out; }
+              .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap .btn-view:hover:after {
+                width: 100%;
+                text-decoration: none; }
     .block-assortment-offers .swiper-container .swiper-button-prev, .block-assortment-offers .swiper-container .swiper-button-next {
       background-image: none;
       height: 40px;
