--- a/css/main.css
+++ b/css/main.css
@@ -10704,10 +10704,8 @@ a {
         -ms-flex-align: center;
         -webkit-align-items: center;
         align-items: center; }
-        .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide:hover .swiper-slide__info .btn-view {
-          opacity: 1;
-          position: relative;
-          left: auto; }
+        .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide:hover .swiper-slide__info .swiper-slide__wrap .btn-view {
+          display: block; }
         .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__img-block img {
           max-width: 270px;
           max-height: 270px;
@@ -10716,9 +10714,31 @@ a {
           position: absolute;
           font-size: 24px;
           color: #fff;
-          z-index: 1; }
+          z-index: 1;
+          left: 50%;
+          top: 50%;
+          width: 100%;
+          -webkit-transform: translate(-50%, -50%);
+              -ms-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%); }
           .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap {
-            position: relative; }
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+                -ms-flex-direction: column;
+                    flex-direction: column; }
             .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap .swiper-slide__title {
               font-size: 20px;
               margin-bottom: 10px;
@@ -10731,7 +10751,6 @@ a {
               -webkit-transition: 0.3s all;
               -o-transition: 0.3s all;
               transition: 0.3s all;
-              opacity: 0;
               background: #fff;
               color: #00a1eb;
               display: inline-block;
@@ -10740,9 +10759,8 @@ a {
               padding: 11px 18px;
               font-size: 14px;
               line-height: 1;
-              position: absolute;
-              left: 25%;
-              font-weight: 700; }
+              font-weight: 700;
+              display: none; }
               .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap .btn-view:after {
                 background-color: #00a1eb;
                 display: block;
@@ -11089,7 +11107,9 @@ a {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
-            justify-content: center; } }
+            justify-content: center; }
+  .block-assortment-offers .swiper-container .swiper-wrapper .swiper-slide .swiper-slide__info .swiper-slide__wrap .btn-view {
+    display: block; } }
 
 @media screen and (max-width: 767px) {
   h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
