--- a/css/main.css
+++ b/css/main.css
@@ -11008,7 +11008,8 @@ a {
       position: absolute;
       right: 1%;
       font-size: 30px;
-      cursor: pointer; }
+      cursor: pointer;
+      top: 0; }
 
 .footer .footer-bottom {
   background: #2b2b2b;
